<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="loc_not_found_title">Location provider disabled</string>
    <string name="loc_not_found_message">This application cannot have access to your current location. Do you want to change the location settings ? </string>
    
    
    
    <string name="sms_lastloc_header">Last known location (may be old): </string>
    <string name="sms_newloc_header">Current location: </string>
    <string name="sms_noloc">No known location</string>
    <string name="sms_loc_fmt">%1$.3f E %2$.3f N\naltitude %3$.0f m., accuracy %4$.0f m.\ntime : %5$s</string>
    
    <string name="app_name">Lost\'n Phoned</string>
    <string name="action_about">About</string>
    <string name="button_continue">Continue</string>
    <string name="msg_about"><![CDATA[
        <p>This software is the result of a collaboration between <i>S. Marache-Fr.</i> and <i>C. Daviller</i></p>
    	<p>Graphics from <i>C. Daviller</i> using images from STEVENDESIGNS.</p>
   	]]></string>

    
    <string name="ring_seek_max">100</string>
    
    <string name="msg_ringtone_num_fmt">Ringtone SMS from %s</string>
    <string name="msg_location_sms_num_fmt">Location SMS from %s</string>
    
    <!--  Preferences  -->
    <!-- General -->
    <string name="pref_gal_cat_sum"> </string>
    <string name="pref_gal_cat_title">General settings</string>
    
    <string name="pref_gal_act_key">chkbx activate</string>
    <string name="pref_gal_act_sum">Check to activate the location by SMS</string>
    <string name="pref_gal_act_title">Respond to location SMS</string>
    
    <!-- Lost at home prefs -->
    <string name="pref_home_cat_sum"> </string>
    <string name="pref_home_cat_title">Ringtone preferences</string>
    
    <string name="pref_home_key_pwd">ring pwd</string>
    <string name="pref_home_title_pwd">RingTone Password </string>
    <string name="pref_home_sum_pwd">If this text is found in a SMS, 
        it will trigger the loud alarm</string>
    
    <string name="pref_home_key_time">ring time</string>
    <string name="pref_home_title_time">Ring time</string>
    <string name="pref_home_sum_time">Select how long the phone shall ring</string>
    
    <string name="pref_home_key_flash_light_chk_box">checkBox</string>
    <string name="pref_home_title_flash_light_chk_box">Use flashlight</string>
    <string name="pref_home_sum_flash_light_chk_box">Check to activate flashlight</string>

    <!-- Lost outdoor -->
    <string name="pref_out_cat_sum"> </string>
    <string name="pref_out_cat_title">location</string>
    
    <string name="pref_out_key_passwd">location password</string>
    <string name="pref_out_title_passwd">Location password</string>
    <string name="pref_out_sum_passwd">If this text is found in a SMS, 
        it will send the coordinates of the phone back by SMS</string>
    
    <!-- Priority call -->
    <string name="pref_prio_cat_sum"> </string>
    <string name="pref_prio_cat_title">Priority call</string>

    <string name="pref_prio_key_specific_caller">pref_specific_caller</string>
    <string name="pref_prio_sum_specific_caller">If called by this number, the 
        ringtone volume will be set to its maximum</string>
    <string name="pref_prio_title_specific_caller">Priority call number</string>    

    <string name="pref_sum_notification_sound">pref_sum_notification_sound</string>
    <string name="pref_title_notification_sound">pref_title_notification_sound</string>
    
    <!-- Images -->
    <string name="img_title_conten_desc">title</string>
    <string name="lbl_slide_to_stop">Slide to stop</string>
</resources>


